--- a/index.html
+++ b/index.html
@@ -235,7 +235,12 @@
   </div>
   <!--container end-->
 
-
+  <img src="Images/fb.jpg" class="profile-img">
+      <img src="Images/insta.jpg" class="profile-img">
+      <img src="Images/twitter.jpg" class="profile-img">
+      <img src="Images/linkedin.jpg" class="profile-img">
+      <img src="Images/github.jpg" class="profile-img">
+    
 </body>
 
 </html>
